fix image blurring issue

--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,6 @@ body, html {
   width: 12vw;
 }
 
-
-
 .image-list img {
   display: block;
   width: 100%;
@@ -44,8 +42,6 @@ body, html {
 }
 
 .main-canvas{
-  height: 98vh;
-  width: 86vw;
   margin: 0.3em;
   border: 1px solid black;
 }
